--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
