getting total price in cart

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@reduxjs/toolkit": "^1.9.2",
     "next": "latest",
     "react": "18.2.0",
+    "react-currency-format": "^1.1.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
@@ -19,6 +21,8 @@
   "devDependencies": {
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
+    "@types/react-currency-format": "^1.0.0",
+    "@types/react-currency-formatter": "^1.1.4",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
