--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.9.2",
+    "@stripe/stripe-js": "^1.46.0",
     "next": "latest",
     "react": "18.2.0",
     "react-currency-format": "^1.1.0",
@@ -16,6 +17,8 @@
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
+    "strip": "^3.0.0",
+    "stripe": "^11.10.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
